Edited homepage and login pages

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -36,3 +36,8 @@ button:hover {
   opacity: 1;
   right: 0;
 }
+a{
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  text-decoration: none;
+}
