--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,5 +1,7 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
 }
 
 input[type="text"],
@@ -65,5 +67,5 @@ span.psw {
     width: 100%;
   }
 
-  
+
 }
