Added logo to login and index pages

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,6 +31,8 @@ button {
   text-align: center;
   font-size: 70px;
   justify-content: center;
+  padding: 20px;
+  padding-bottom: 0px;
 }
 button:hover {
   opacity: 1;
