--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -28,20 +28,21 @@ button:hover {
   opacity: 0.8;
 }
 
-.cancelbtn {
+/* .cancelbtn {
   width: auto;
   padding: 10px 18px;
   background-color: #f44336;
-}
+} */
 
 .imgcontainer {
   text-align: center;
   margin: 24px 0 12px 0;
 }
 
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
+img.logo {
+  width: 10px;
+  height: 10px;
+  border-radius: 15%;
 }
 
 .container {
@@ -63,9 +64,9 @@ span.psw {
     display: block;
     float: none;
   }
-  .cancelbtn {
+  /* .cancelbtn {
     width: 100%;
-  }
+  } */
 
 
 }
