Added 20 products(fruits, juices, milk, bread, alcohol)

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -137,9 +137,11 @@ form.example::after {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
+  max-height: 275px;
   margin: auto;
   text-align: center;
   font-family: arial;
+  font-size: 10px;
   padding: 16px;
   background-color: grey;
 }
