Created a sample cart and checkout page

--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -11,8 +11,8 @@ html {
 body {
 
   max-width: 980px;
-  color: #ccc;
-  font-family: "Lato", serif;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
   background-color: #000;
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: subpixel-antialiased;
@@ -36,9 +36,13 @@ button:hover {
   opacity: 1;
   right: 0;
 }
+p{
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+}
 a{
   font-family: 'Montserrat', sans-serif;
-  color: white;
+  color: black;
   text-decoration: none;
 }
 .imgcontainer{
@@ -79,7 +83,7 @@ form.example button {
 
 form.example button:hover {
 
-  background: brown;
+  background: #0b7dda;
 }
 
 form.example::after {
@@ -87,7 +91,6 @@ form.example::after {
   clear: both;
   display: table;
 }
-
 .cart{
   position: absolute;
   top:0;
@@ -109,8 +112,6 @@ form.example::after {
   display: table;
   clear: both;
 }
-
-/* Responsive columns */
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
@@ -118,7 +119,93 @@ form.example::after {
     margin-bottom: 20px;
   }
 }
-.products{
+
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.col-25 {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+}
+
+.col-50 {
+  -ms-flex: 50%; /* IE10 */
+  flex: 50%;
+}
+
+.col-75 {
+  -ms-flex: 75%; /* IE10 */
+  flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+
+.container {
+  background-color: #f2f2f2;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+}
+
+input[type=text] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 24px;
+}
+
+.btn {
+  background-color: brown;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: brown;
+}
+
+span.price {
+  float: right;
+  color: black;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+@media (max-width: 800px) {
+  .row {
+    flex-direction: column-reverse;
+  }
+  .col-25 {
+    padding: 10px;
+  }
+}
+.checkout{
   padding: 10px;
   margin-top: 15%;
   margin-left: 20%;
@@ -127,35 +214,3 @@ form.example::after {
   border-style: dashed;
   border-radius: 5px;
 }
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  max-height: 275px;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
-  font-size: 10px;
-  padding: 16px;
-  background-color: grey;
-}
-
-.price {
-  color: white;
-  font-size: 22px;
-}
-
-.card button {
-  border: none;
-  outline: 0;
-  padding: 12px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-.card button:hover {
-  opacity: 0.7;
