--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -19,6 +19,7 @@ button {
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
+  font-size: 1.5em;
   border: none;
   cursor: pointer;
   width: 100%;
