--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -18,6 +18,7 @@ button {
   background-color: brown;
   color: white;
   padding: 14px 20px;
+  font-size: 1.5em;
   margin: 8px 0;
   border: none;
   cursor: pointer;
