cart styled and functional

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -42,7 +42,7 @@
 .cart-column {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(148, 148, 148);
   margin-right: 1.5em;
   padding-bottom: 10px;
   margin-top: 10px;
