--- a/css/home.css
+++ b/css/home.css
@@ -41,6 +41,11 @@ a{
   color: white;
   text-decoration: none;
 }
+
+h1, h2{
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+}
 .imgcontainer{
   position:absolute;
   left:0;
@@ -105,7 +110,9 @@ form.example::after {
 }
 
 /* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
+.row {
+  margin: 0 -5px;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -132,10 +139,11 @@ form.example::after {
   border-radius: 5px;
 }
 
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  max-height: 275px;
+  max-height: 300px;
   margin: auto;
   text-align: center;
   font-family: arial;
