--- a/css/home.css
+++ b/css/home.css
@@ -41,6 +41,11 @@ a{
   color: white;
   text-decoration: none;
 }
+
+h1, h2{
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+}
 .imgcontainer{
   position:absolute;
   left:0;
@@ -49,10 +54,19 @@ a{
 * {
   box-sizing: border-box;
 }
+.staff-login{
+  position: absolute;
+  right: 230px;
+  top: 20px;
+  padding:10px;
+  border-style: groove;
+}
 .account{
   position: absolute;
   right: 100px;
-  top: 30px;
+  top: 20px;
+  padding:10px;
+  border-style: groove;
 }
 form.example input[type=text] {
   position: relative;
@@ -105,7 +119,9 @@ form.example::after {
 }
 
 /* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
+.row {
+  margin: 0 -5px;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -132,10 +148,11 @@ form.example::after {
   border-radius: 5px;
 }
 
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  max-height: 275px;
+  max-height: 300px;
   margin: auto;
   text-align: center;
   font-family: arial;
@@ -165,3 +182,13 @@ form.example::after {
   opacity: 0.7;
 }
 
+.container-content-section{
+  padding: 10px;
+  margin-top: 15%;
+  margin-left: 20%;
+  margin-right: 10%;
+  border-color: white;
+  border-style: dashed;
+  border-radius: 5px;
+  font-family: 'Montserrat', sans-serif;
+}
