--- a/css/checkout.css
+++ b/css/checkout.css
@@ -98,7 +98,7 @@ form.example::after {
 
 }
 .column {
-  float: left;
+  float: right;
   width: 25%;
   padding: 0 10px;
 }
@@ -195,7 +195,17 @@ span.price {
   float: right;
   color: black;
 }
-
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 200px;
+  max-height: 200px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  font-size: 10px;
+  padding: 16px;
+  background-color: grey;
+}
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
 @media (max-width: 800px) {
   .row {
@@ -207,6 +217,7 @@ span.price {
 }
 .checkout{
   padding: 10px;
+margin-bottom: 100px;
   margin-top: 15%;
   margin-left: 20%;
   margin-right: 10%;
